*gentoo-sources-image-4.19.85 (22 Nov 2019)

  22 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
  +gentoo-sources-image-4.19.85.ebuild:
  sys-kernel/gentoo-sources-image: version bump to 4.19.85

  21 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
  gentoo-sources-image-4.19.84.ebuild:
  sys-kernel/gentoo-sources-image: Add note, remove the genkernel word

  20 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
  gentoo-sources-image-4.19.84.ebuild:
  sys-kernel/gentoo-sources-image: fix path

*gentoo-sources-image-4.19.84 (20 Nov 2019)

  20 Nov 2019; Agostino Sarubbo <ago@gentoo.org> +files/bashrc,
  +gentoo-sources-image-4.19.84.ebuild, +metadata.xml:
  sys-kernel/gentoo-sources-image: first commit, renamed from sys-kernel/gentoo-
  sources-kernelimage