@@ -1,3 +1,7 @@
+  22 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
+  -gentoo-sources-image-4.19.84.ebuild:
+  sys-kernel/gentoo-sources-image: remove old
+
 *gentoo-sources-image-4.19.85 (22 Nov 2019)
 
   22 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
